# data_structure_project

./: .gitignore  CMakeLists.txt  data.c  data.h  main.c  memo.txt  search_engine.h  test.c  utils.h  자료구조 프로그램 구성도.drawio
reader/: fileControl.c  fileControl.h  hashDataStructure.c  hashDataStructure.h  reader.c  reader.h
search/: hash.c  hash.h  search.h  search_engine.h
textFile/: file1.txt  fileInfo.txt
